refactoring around StandardCharsets.UTF_8